--- a/NB00 Python Basics Review.ipynb
+++ b/NB00 Python Basics Review.ipynb
@@ -6,7 +6,16 @@
    "metadata": {},
    "source": [
     "# MTY4-NB00: Python Basics\n",
-    "by Sergio Eraso"
+    "by Sergio Eraso\n",
+    "\n",
+    "## Contents\n",
+    "0. Introduction\n",
+    "1. Installing Python and Installing packages\n",
+    "2. Importing and using packages\n",
+    "3. Writing functions\n",
+    "4. Loops (eg. `for`, `while`)\n",
+    "5. Control flow (eg. `if`, `else`)\n",
+    "6. More Challenging Problems"
    ]
   },
   {
@@ -14,15 +23,10 @@
    "id": "5b33ad93",
    "metadata": {},
    "source": [
-    "## Introduction\n",
+    "## 0. Introduction\n",
     "\n",
-    "In this club we assume you are familiar with Python and basic programming. If you want to review some of the syntax and concepts in python, this notebook will **very** briefly cover the following table of contents:\n",
-    "1. Installing Python and Installing packages\n",
-    "2. Importing and using packages\n",
-    "3. Writing functions\n",
-    "4. Loops (eg. `for`, `while`)\n",
-    "5. Control flow (eg. `if`, `else`)\n",
-    "6. More Challenging Problems\n",
+    "In this club we assume you are familiar with Python and basic programming. If you want to review some of the syntax and concepts in python, this notebook will **very** briefly cover the material in the table of contents.\n",
+    "\n",
     "\n",
     "This notebook is **not** meant to teach you Python or programming essentials from scratch. If you want a more thorough review, please refer to the [official Python Tutorial](https://docs.python.org/3/tutorial/index.html). Artificial intelligence LLMs such as [ChatGPT](https://chatgpt.com) are also a good resource for reviewing syntax and debugging (sometimes). Feel free to use them."
    ]
@@ -39,7 +43,7 @@
     "By far, the quickest way to get started without having to worry about the technicalities of installing python and packages is [Google Colab](https://colab.research.google.com/). This runs Python on Google's servers and comes with all the packages we will need pre-installed. We highly recommend this if you want to get started as soon as possible. One advantage of this approach is that you will also have access to your notebooks from all of your devices, similar to Google Drive.\n",
     "\n",
     "### Option 2: Local Installation via Anaconda\n",
-    "To install Python locally -- this means that code will run directly on your machine -- we recommend downloading the [Anaconda distribution](https://www.anaconda.com/download/success). This comes with python and a graphical user interface (GUI) called Anaconda Navigator that simplifies managing your packages and virtual environments. The [documentation](https://www.anaconda.com/docs/tools/working-with-conda/packages/install-packages) is your friend and contains all information on how to install packages using the terminal or Anaconda Navigator. There are many benefits to this approach and if you want to continue using Python beyond this club we highly recommend you eventually obtain a local installation of Python. You should also familiarize yourself with virtual environments as a way to organize your different projects (but this is not necessary for this course)."
+    "To install Python locally -- this means that code will run directly on your machine -- we recommend downloading the [Anaconda distribution](https://www.anaconda.com/download/success). This comes with python and a graphical user interface (GUI) called Anaconda Navigator that simplifies managing your packages and virtual environments. The [documentation](https://www.anaconda.com/docs/tools/working-with-conda/packages/install-packages) is very useful and contains information on how to install packages using the terminal or Anaconda Navigator. There are many benefits to this approach and if you want to continue using Python beyond this club we highly recommend you eventually obtain a local installation of Python. You should also familiarize yourself with virtual environments as a way to organize your different projects (but this is not necessary for this course). We also recommend you use a code editor like [VS Code](https://code.visualstudio.com/)."
    ]
   },
   {
@@ -79,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1 = [41, 59, 23, 5, 19, 78]       # create a python list\n",
-    "a1 = np.asarray(l1)       # store the list in a numpy array\n",
+    "l1 = [41, 59, 23, 5, 19, 78]        # create a python list\n",
+    "a1 = np.asarray(l1)                 # store the list in a numpy array\n",
     "print(f\"The type of my_list is: {type(l1)}\")   # check the types of l1 and a1 using an f-string\n",
     "print(f\"The type of a1 is: {type(a1)}\")"
    ]
@@ -119,9 +123,9 @@
    "outputs": [],
    "source": [
     "mean_value = mean(a1)        # calculate the mean of a1\n",
-    "std_value = std(a1)\n",
-    "print(f\"The mean of a1 is: {mean_value}\")     # print the mean using an f-string\n",
-    "print(f\"The standard deviation of a1 is: {std_value}\")     # print the standard deviation using an f-string"
+    "std_value = std(a1)          # calculate the standard deviation of a1\n",
+    "print(f\"The mean of a1 is: {mean_value}\")                   # print the mean using an f-string\n",
+    "print(f\"The standard deviation of a1 is: {std_value}\")      # print the standard deviation using an f-string"
    ]
   },
   {
@@ -140,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------Exercise 1-----------\n",
+    "# ---------Exercise-----------\n",
     "\n",
     "# your code here"
    ]
@@ -189,7 +193,7 @@
    "source": [
     "#### *Exercise 2*\n",
     "\n",
-    "Write a function called `sum_of_powers` that takes on two required arguments `x` and `y` and one optional argument `p` with default value `2`. The function should return the sum of the `p`th powers of `x` and `y`. For example, a call of `sum_of_powers(2,1,p=3)` should return 9."
+    "Write a function called `sum_of_powers` that takes on two required arguments $x$ and $y$ and one optional argument $p$ with default value $2$. The function should return the sum of the $p^{\\text{th}}$ powers of `x` and `y`, that is $x^p + y^p$."
    ]
   },
   {
@@ -199,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------Exercise 2-----------\n",
+    "# ---------Exercise-----------\n",
     "\n",
     "# your code here"
    ]
@@ -293,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------Exercise 3-----------\n",
+    "# ---------Exercise-----------\n",
     "\n",
     "# your code here"
    ]
@@ -313,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l2 = [i**2 for i in range(10)]      # list comprehension\n",
+    "l2 = [i**2 for i in range(10)]                      # list comprehension\n",
     "d1 = {i : elem for i, elem in enumerate(a1)}        # dictionary (hashtable) comprehension\n",
     "print(l2)\n",
     "print(d1)"
@@ -325,7 +329,7 @@
    "metadata": {},
    "source": [
     "#### *Exercise 4*\n",
-    "Using list comprehension, create a python list whose elements are the cubic powers of the integers ranging from 2 to 10 with a step size of 2 (look up the `range` documentation). Then, write a `for` loop to print out each element in this list."
+    "Using list comprehension, create a python list whose elements are the cubic powers of the integers ranging from $2$ to $10$ with a step size of $2$ (look up the `range` documentation). Then, write a `for` loop to print out each element in this list."
    ]
   },
   {
@@ -335,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------Exercise 4-----------\n",
+    "# ---------Exercise-----------\n",
     "\n",
     "# your code here"
    ]
@@ -404,6 +408,12 @@
    "outputs": [],
    "source": [
     "def categorize_temperature(temp):\n",
+    "    \"\"\"\n",
+    "    Categorize a given temperature\n",
+    "    \n",
+    "    Parameters:\n",
+    "      temp (float): the temperature (required)\n",
+    "    \"\"\"\n",
     "    if temp <= 0:\n",
     "        return \"freezing\"\n",
     "    elif temp <= 15:\n",
@@ -435,7 +445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ---------Exercise 5-----------\n",
+    "# ---------Exercise-----------\n",
     "\n",
     "# your code here"
    ]
