--- a/NB00 Python Basics Review.ipynb
+++ b/NB00 Python Basics Review.ipynb
@@ -53,14 +53,14 @@
    "source": [
     "## 2. Importing and Using Packages\n",
     "\n",
-    "A package is a collection of objects and functions work to accomplish some goal. For example, The `numpy` package is used to manipulate arrays (vectors and matrices) in a convenient and efficient manner. The `matplotlib` package is used to create figures and plots for data visualization. The `pandas` package is used to analyze data and compute statistics. There are thousands of packages available for Python, making it one of the most versatile and modular programming languages available.\n",
+    "A package is a collection of objects and functions bundled together to accomplish some goal. For example, The `numpy` package is used to manipulate arrays (vectors and matrices) in a convenient and efficient manner. The `matplotlib` package is used to create figures and plots for data visualization. The `pandas` package is used to analyze data and compute statistics. There are thousands of packages available for Python, making it one of the most versatile and modular programming languages available.\n",
     "\n",
     "Try running the cell below to import the Python package `numpy` under the alias `np`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "babc003f",
    "metadata": {},
    "outputs": [],
@@ -78,10 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e936c6d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The type of my_list is: <class 'list'>\n",
+      "The type of a1 is: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [41, 59, 23, 5, 19, 78]        # create a python list\n",
     "a1 = np.asarray(l1)                 # store the list in a numpy array\n",
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "600dadd6",
    "metadata": {},
    "outputs": [],
@@ -112,15 +121,24 @@
    "id": "9e027100",
    "metadata": {},
    "source": [
-    "We can now use these functions to calculate the mean and standard deviation of `a1`. Note that we no longer need to precede the function call with `np`"
+    "We can now use these functions to calculate the mean and standard deviation of the array `a1`. Note that we no longer need to precede the function call with `np`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ccf1377f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of a1 is: 37.5\n",
+      "The standard deviation of a1 is: 24.91151005726737\n"
+     ]
+    }
+   ],
    "source": [
     "mean_value = mean(a1)        # calculate the mean of a1\n",
     "std_value = std(a1)          # calculate the standard deviation of a1\n",
@@ -165,10 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f2ad2e39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Jackie!\n",
+      "Good morning, Mati!\n",
+      "Hey, Gabi...\n"
+     ]
+    }
+   ],
    "source": [
     "def greet(name, greeting=\"Hello\", punctuation=\"!\"):\n",
     "    \"\"\"\n",
@@ -183,7 +211,7 @@
     "\n",
     "print(greet(\"Jackie\"))   \n",
     "print(greet(\"Mati\", greeting=\"Good morning\")) \n",
-    "print(greet(\"Gabi\", punctuation=\"!!!\", greeting=\"Hey\"))   "
+    "print(greet(\"Gabi\", punctuation=\"...\", greeting=\"Hey\"))   # optional arguments can be passed in any order "
    ]
   },
   {
@@ -193,7 +221,9 @@
    "source": [
     "#### *Exercise 2*\n",
     "\n",
-    "Write a function called `sum_of_powers` that takes on two required arguments $x$ and $y$ and one optional argument $p$ with default value $2$. The function should return the sum of the $p^{\\text{th}}$ powers of `x` and `y`, that is $x^p + y^p$."
+    "1. Write a function called `sum_of_powers` that takes on two required numbers $x$ and $y$ and one optional argument $p$ with default value $2$. The function should return the sum of the $p^{\\text{th}}$ powers of `x` and `y`, that is $x^p + y^p$.\n",
+    "2. Compute the hypotenuse of a triangle with sides $51$ and $149$.\n",
+    "3. Compute the total volume of two cubes, one with a side length of $12$ and the other with side length $17$."
    ]
   },
   {
@@ -224,22 +254,38 @@
    "metadata": {},
    "source": [
     "### `for` Loops\n",
-    "For loops are useful when you know exactly how many times a loop should be executed. For example, we can loop over an indexing variable `i` or `j` a fixed number of times and do something with it (e.g. print it out) as in the following examples"
+    "For loops are useful when you know *exactly* how many times a loop should be executed. For example, we can compute the sum of the first $10$ integers or we can print out the squares of the integers between $2$ and $6$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f44ea816",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum of first 10 integers = 55\n",
+      "...first for loop finished\n",
+      "the square of 2 is 4\n",
+      "the square of 3 is 9\n",
+      "the square of 4 is 16\n",
+      "the square of 5 is 25\n",
+      "...second for loop finished\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(8):\n",
-    "    print(f\"i = {i}\")\n",
+    "my_sum = 0\n",
+    "for i in range(11):     # notice that range(11) generates numbers from 0 to 10, inclusive\n",
+    "    my_sum += i\n",
+    "print(f\"sum of first 10 integers = {my_sum}\")\n",
     "print(\"...first for loop finished\")\n",
     "\n",
     "for j in range(2, 6):\n",
-    "    print(f\"The square of {j} is {j**2}\")\n",
+    "    print(f\"the square of {j} is {j**2}\")\n",
     "print(\"...second for loop finished\")"
    ]
   },
@@ -253,10 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "fec5c6da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41\n",
+      "59\n",
+      "23\n",
+      "5\n",
+      "19\n",
+      "78\n"
+     ]
+    }
+   ],
    "source": [
     "for elem in a1:\n",
     "    print(elem)"
@@ -272,10 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "25a62847",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a[0] = 41\n",
+      "a[1] = 59\n",
+      "a[2] = 23\n",
+      "a[3] = 5\n",
+      "a[4] = 19\n",
+      "a[5] = 78\n"
+     ]
+    }
+   ],
    "source": [
     "for i, elem in enumerate(a1):\n",
     "    print(f\"a[{i}] = {elem}\")"
@@ -287,7 +359,7 @@
    "metadata": {},
    "source": [
     "#### *Exercise 3*\n",
-    "Write a function called `sum_array` that uses a `for` loop to calculate the sum of all of the elements of an array `a`. Does your function return the correct result for the array `a1` we defined earlier?"
+    "Write a function called `sum_array` that uses a `for` loop to calculate the sum of all of the elements of an array `a`. Does your function return the same result for the array `a1` as the numpy `sum` function??"
    ]
   },
   {
@@ -329,7 +401,9 @@
    "metadata": {},
    "source": [
     "#### *Exercise 4*\n",
-    "Using list comprehension, create a python list whose elements are the cubic powers of the integers ranging from $2$ to $10$ with a step size of $2$ (look up the `range` documentation). Then, write a `for` loop to print out each element in this list."
+    "Using list comprehension:\n",
+    "1. Create a python list whose elements are the cubic powers of the integers ranging from $2$ to $10$ with a step size of $2$ (look up the `range` documentation). \n",
+    "2. Write a `for` loop to print out each element in this list."
    ]
   },
   {
@@ -351,15 +425,28 @@
    "source": [
     "### `while` Loops\n",
     "\n",
-    "While loops are useful when you may not know how many times a loop should occur, but you do know a logical condition (e.g. `x < 10`) that should be satisfied for the loop to continue. For example, we can initialize a variable `x` and run the loop until `x` passes some limit."
+    "While loops are useful when you may not know how many times a loop should occur, but you do know a logical condition (e.g. `x < 10`) that should be satisfied for the loop to continue. For example, we can initialize a variable `x` and run the loop until `x` crosses some threshhold."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c31d1cbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "...end of while loop\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "while x < 10:\n",
@@ -378,10 +465,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ed06b4a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...this is an infinite loop!\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m y \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m...this is an infinite loop!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m y \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m10\u001b[39m:\n\u001b[0;32m      4\u001b[0m     y \u001b[38;5;241m=\u001b[39m y \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m...this will never be printed!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "y = 0\n",
     "print(\"...this is an infinite loop!\")\n",
@@ -402,10 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6e513958",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cold\n",
+      "freezing\n",
+      "mild\n",
+      "hot\n"
+     ]
+    }
+   ],
    "source": [
     "def categorize_temperature(temp):\n",
     "    \"\"\"\n",
@@ -489,7 +606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pych1",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
